--- a/css/projects.css
+++ b/css/projects.css
@@ -6,7 +6,7 @@
     color: #054a91
 }
 
-h1 {
+h1, h2 {
     font-weight: bold;
     /* border: 2px black solid; */
     margin: 0;
@@ -77,11 +77,32 @@ nav a {
     display: block;
     text-decoration: none;
     /* font-weight: bold; */
-    color: #054a91;
+    color: #2a3540;
 }
-
-
 
 .mainbody {
     margin-top: 3.48rem;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 1rem;
+    column-gap: 1rem;
+    grid-template-areas:
+    "CIWDv3 FarukB";
+}
+
+.CIWDv3-project {
+    grid-area: CIWDv3;
+}
+
+.faruk-biryani {
+    grid-area: FarukB;
+}
+
+.psection {
+    border: 2px #054a91 solid;
+    border-radius: 1rem;
+    padding: 1.5rem;
 }
