--- a/css/CIWDv3-css-project.css
+++ b/css/CIWDv3-css-project.css
@@ -42,7 +42,6 @@ h2 {
     column-gap: 3rem;
     row-gap: 1.5rem;
     grid-template-areas:
-    "header header"
     "items name"
     "items name"
     "items payment"
@@ -53,6 +52,9 @@ h2 {
     "price-label price-cost"
     "price-label price-cost"
     "order order";
+    padding: 1.5rem;
+    margin: 0;
+    width: 100%;
 }
 
 .header {
@@ -61,9 +63,8 @@ h2 {
     background-color: #43281c;
     color: #fbf2c0;
     align-items: center;
-    grid-area: header;
     padding: 0.75rem;
-    margin-bottom: 1.5rem;
+    margin: 0;
 }
 
 .items {
@@ -92,7 +93,7 @@ h2 {
     grid-area: order;
     justify-content: center;
     border-radius: 3rem;
-    padding: 0.5rem;
+    padding: 1rem 1rem;
     margin: 0 5rem;
     background-color: #daa06d;
 }
@@ -190,10 +191,81 @@ td {
     margin-top: 1.5rem;
 }
 
-.mleft {
-    margin-left: 1.5rem;
+@media screen and (max-width: 700px) and (min-width: 400px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 3rem;
+        row-gap: 1.5rem;
+        grid-template-areas:
+        "items items"
+        "items items"
+        "items items"
+        "name name"
+        "name name"
+        "payment payment"
+        "payment payment"
+        "price-label price-cost"
+        "price-label price-cost"
+        "order order";
+        padding: 1.5rem;
+        margin: 0;
+    }
+
+    .section {
+        max-width: 100%;
+    }
+
+    .order {
+        grid-area: order;
+        justify-content: center;
+        border-radius: 2rem;
+        padding: 1rem 1rem;
+        margin: 0 1rem;
+        background-color: #daa06d;
+    }
 }
 
-.mright {
-    margin-right: 1.5rem;
+@media screen and (max-width: 400px) {
+    .grid-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .section {
+        display: inline-block;
+    }
+    
+    .price-label {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        padding: 1rem 1rem 0 1rem;
+    }
+
+    .pl-layout {
+        display: inline-block;
+        text-align: center;
+    }
+
+    .price-cost {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        padding: 0 1rem 1rem 1rem;
+        margin: 0;
+    }
+
+    .pc-layout {
+        display: inline-block;
+        text-align: center;
+        margin: 0;
+    }
+
+    .order {
+        grid-area: order;
+        justify-content: center;
+        border-radius: 2rem;
+        padding: 1rem 1rem;
+        margin: 0 1rem;
+        background-color: #daa06d;
+    }
 }
