--- a/css/projects.css
+++ b/css/projects.css
@@ -24,4 +24,18 @@
     border: 2px #054a91 solid;
     border-radius: 1rem;
     padding: 1.5rem;
+    background-color: coral;
+}
+
+@media screen and (max-width: 600px) {
+    .grid-container {
+        display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 1rem;
+    column-gap: 1rem;
+    grid-template-areas:
+    "CIWDv3-html"
+    "CIWDv3-css"
+    "FarukB";
+    }
 }
