--- a/css/projects.css
+++ b/css/projects.css
@@ -1,11 +1,12 @@
 .grid-container {
+    margin-top: 1rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
     row-gap: 1rem;
     column-gap: 1rem;
     grid-template-areas:
-    "CIWDv3-html CIWDv3-css"
-    "CIWDv3-NP FarukB";
+        "CIWDv3-html CIWDv3-css"
+        "CIWDv3-NP FarukB";
 }
 
 .html-blog-project {
@@ -34,13 +35,14 @@
 @media screen and (max-width: 600px) {
     .grid-container {
         display: grid;
-    grid-template-columns: 1fr;
-    row-gap: 1rem;
-    column-gap: 1rem;
-    grid-template-areas:
-    "CIWDv3-html"
-    "CIWDv3-css"
-    "CIWDv3-NP"
-    "FarukB";
+        grid-template-columns: 1fr;
+        row-gap: 1rem;
+        column-gap: 1rem;
+        grid-template-areas:
+            "CIWDv3-html"
+            "CIWDv3-css"
+            "CIWDv3-NP"
+            "FarukB";
     }
 }
+
