--- a/css/projects.css
+++ b/css/projects.css
@@ -1,4 +1,4 @@
-.grid-container {
+.projects-grid {
     margin-top: 1rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -26,14 +26,18 @@
 }
 
 .psection {
-    border: 2px #054a91 solid;
+    border: 4px #8d86c9 solid;
     border-radius: 1rem;
     padding: 1.5rem;
-    background-color: #f17300;
+    background-color: transparent;
+}
+
+div.project-tabs {
+    display: none;
 }
 
 @media screen and (max-width: 600px) {
-    .grid-container {
+    .projects-grid {
         display: grid;
         grid-template-columns: 1fr;
         row-gap: 1rem;
@@ -44,5 +48,39 @@
             "CIWDv3-NP"
             "FarukB";
     }
-}
 
+    /* div.project-tabs {
+        display: flex;
+        width: 100%;
+    }
+
+    ul.projects-list {
+        list-style-type: none;
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        width: 100%;
+        padding: 1rem 0;
+        gap: 0.5=25rem;
+    }
+
+    a.project-link {
+        text-decoration: none;
+        font-weight: bold;
+        color: #cac4ce;
+        border: 2px green solid;
+    }
+
+    a.project-link::after {
+        content: '';
+        height: 2px;
+        background-color:#8d86c9;
+        width: 0;
+        display: block;
+        transition: width .2s ease-in-out;
+    }
+
+    a.project-link:hover::after {
+        width: 100%;
+    } */
+}
