no border for navmenu

--- a/css/styles.css
+++ b/css/styles.css
@@ -169,7 +169,7 @@ ul.navmenu-list {
     top: 0;
     right: -20rem;
     transition: .6s ease-in-out;
-    border-left: 4px #f7ece1 solid;
+    /* border-left: 4px #f7ece1 solid; */
 }
 
 li.menu-items:first-child {
@@ -287,6 +287,7 @@ li.navmenu-active a i.for-navmenu {
         right: -400px;
         transition: .6s ease-in-out;
         backdrop-filter: blur(0.2rem);
+        border: none;
     }
 }
 
